projet_gl/src/test/deca/context/valid/3_71/3_71_3_MethodCall.deca
// Description:
//    
//
// Resultats:
//    ok
//
// Historique:
//    cree le 19/01/2024



class B {
    int b = 1;
    int getB() {
        return b; 
    }
}

class X extends B{
    B test = new B();
    int x = test.getB();
}