projet_gl/src/test/deca/context/invalid/3_71/3_71_2_MethodCall.deca
// Description:
//    
//
// Resultats:
//    Error : is not a subtype
//
// Historique:
//    cree le 19/01/2024

class A{
    protected int x;
}

class B extends A {
    int b = 0;
    int getX(A a) {
        return a.x; 
    }
}

class X {
    void m() {
        A a = new A();
        B b = new B();
        println(b.getX(a));
    }
}